--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <h1 class="visually-hidden">Dental Clinic</h1>
 
-  <header class="site-header">
+  <header class="site-header site-header--nojs">
     <div class="container">
 
       <div class="site-header__wrapper">
