fix responsive mistake

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
           <picture>
             <source media="(max-width:375px)" srcset="img/heero-bg-375.png 1x, img/heero-bg-375@2x.png 2x">
 
+          
+            <source media="(max-width:800px)" srcset="img/hero-bg-600.png 1x, img/hero-bg-600@2x.png 2x">
+
+
             <img src="img/hero-bg.png" alt="woman smile" srcset="img/hero-bg.png 1x, img/hero-bg@2x.png 2x">
           </picture>
           <div class="container">
