add some accsescbility

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <main>
 
     <section class="hero-section">
-
+      <h2 class="visually-hidden">Modern technology and expert-class dentists</h2>
       <ul class="hero-section__slider">
         <li class="hero-section__bg">
           <picture>
