--- a/index.html
+++ b/index.html
@@ -320,7 +320,12 @@
             <li class="review-section__list-item">
               <h3>Ivanov Ivan</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-              <img src="img/review-img-1.png" alt="" srcset="img/review-img-1.png 1x, img/review-img-1@2x.png 2x">
+              <picture>
+
+                <source type="image/webp" srcset="img/review-img-1.webp 1x, img/review-img-1@2x.webp 2x">
+
+                <img src="img/review-img-1.png" alt="" srcset="img/review-img-1.png 1x, img/review-img-1@2x.png 2x">
+              </picture>
             </li>
   
             <li class="review-section__list-item">
